# subtile-ocr

./: .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  taplo.toml
.github/: FUNDING.yml
.github/actions/checks/: action.yml
.github/workflows/: build.yml  code_check.yml  commits.yml  release-plz.yml
fixtures/: sequence_without_ods.sup
src/: glyph.rs  glyph_asker_term.rs  lib.rs  main.rs  ocr.rs  ocs.rs  opt.rs  preprocessor.rs
