[package]
name = "subtile-ocr"
version = "0.2.5"
authors = ["Eliza Velasquez", "Gwen Lg <me@gwenlg.fr>"]
edition = "2021"
description = "Converts DVD VOB subtitles to SRT subtitles with Tesseract OCR"
license = "GPL-3.0"
keywords = ["vobsub", "subtitles", "dvd", "ocr", "pgs"]
categories = ["command-line-utilities", "multimedia", "multimedia::video"]
repository = "https://github.com/gwen-lg/subtile-ocr"
homepage = "https://github.com/gwen-lg/subtile-ocr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["cargo", "derive"] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "pnm",
] }
iter_fixed = "0.4"
leptess = "0.14"
log = "0.4"
profiling = "1.0"
puffin = { version = "0.19", features = ["serialization"], optional = true }
rayon = "1.10"
scoped-tls-hkt = "0.1"
simple_logger = { version = "5.0", features = ["colors"] }
subtile = "0.4"
thiserror = "2.0"

[features]
default = []
profile-with-puffin = ["profiling/profile-with-puffin", "dep:puffin"]

[lints.rust]
missing_docs = "warn"
unused_imports = "warn"

[lints.clippy]
cargo = { priority = -1, level = "warn" }
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
# The individually activated lints below come from : nursery, pedantic, restriction or suspicious.
allow_attributes = "warn"
bind_instead_of_map = "deny"
borrowed_box = "deny"
cast_lossless = "warn"
cast_possible_wrap = "warn"
checked_conversions = "deny"
clone_on_copy = "deny"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
explicit_deref_methods = "deny"
extra_unused_lifetimes = "deny"
fallible_impl_from = "deny"
future_not_send = "warn"
if_not_else = "warn"
manual_assert = "warn"
map_unwrap_or = "deny"
match_same_arms = "warn"
missing_const_for_fn = "warn"
missing_errors_doc = "warn"
missing_fields_in_debug = "warn"
missing_panics_doc = "warn"
must_use_candidate = "deny"
needless_collect = "deny"
needless_pass_by_ref_mut = "deny"
needless_pass_by_value = "deny"
nonminimal_bool = "deny"
option_if_let_else = "warn"
or_fun_call = "deny"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "deny"
string_lit_as_bytes = "warn"
trivially_copy_pass_by_ref = "deny"
type_repetition_in_bounds = "deny"
uninlined_format_args = "deny"
unnecessary_semicolon = "deny"
unnecessary_wraps = "deny"
unreadable_literal = "deny"
use_self = "deny"
useless_conversion = "warn"
