[package]
name = "subtile-ocr"
version = "0.2.6"
authors = ["Eliza Velasquez", "Gwen Lg <me@gwenlg.fr>"]
edition = "2021"
description = "Converts DVD VOB subtitles to SRT subtitles with Tesseract OCR"
license = "GPL-3.0"
keywords = ["vobsub", "subtitles", "dvd", "ocr", "pgs"]
categories = ["command-line-utilities", "multimedia", "multimedia::video"]
repository = "https://github.com/gwen-lg/subtile-ocr"
homepage = "https://github.com/gwen-lg/subtile-ocr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["cargo", "derive"] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "pnm",
] }
iter_fixed = "0.4"
leptess = "0.14"
log = "0.4"
profiling = "1.0"
puffin = { version = "0.19", features = ["serialization"], optional = true }
rayon = "1.11"
scoped-tls-hkt = "0.1"
simple_logger = { version = "5.1", features = ["colors"] }
subtile = "0.4"
thiserror = "2.0"

[features]
default = []
profile-with-puffin = ["profiling/profile-with-puffin", "dep:puffin"]

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = "warn"
unused_imports = "warn"

[lints.clippy]
cargo = { priority = -1, level = "warn" }
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
# The individually activated lints below come from : nursery, pedantic, restriction or suspicious.
allow_attributes = "warn"
as_ptr_cast_mut = "warn"
await_holding_lock = "warn"
bind_instead_of_map = "deny"
bool_to_int_with_if = "warn"
borrowed_box = "deny"
branches_sharing_code = "warn"
cast_lossless = "warn"
cast_nan_to_int = "deny"
cast_possible_wrap = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "deny"
clear_with_drain = "warn"
clone_on_copy = "deny"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
default_union_representation = "warn"
derive_partial_eq_without_eq = "warn"
disallowed_macros = "warn"
disallowed_methods = "warn"
disallowed_names = "warn"
disallowed_script_idents = "warn"
disallowed_types = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
empty_enum = "warn"
empty_enum_variants_with_brackets = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "deny"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
extra_unused_lifetimes = "deny"
fallible_impl_from = "deny"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
fn_to_numeric_cast_any = "warn"
from_iter_instead_of_collect = "warn"
future_not_send = "warn"
get_unwrap = "warn"
if_let_mutex = "warn"
if_not_else = "warn"
implicit_clone = "warn"
implied_bounds_in_impls = "warn"
imprecise_flops = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
into_iter_without_iter = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_over_hash_type = "warn"
iter_without_into_iter = "warn"
large_digit_groups = "warn"
large_include_file = "warn"
large_stack_arrays = "warn"
large_stack_frames = "warn"
large_types_passed_by_value = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
let_unit_value = "warn"
linkedlist = "warn"
literal_string_with_formatting_args = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "deny"
match_bool = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
missing_const_for_fn = "warn"
missing_enforced_import_renames = "warn"
missing_errors_doc = "warn"
missing_fields_in_debug = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
mixed_attributes_style = "warn"
must_use_candidate = "deny"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_collect = "deny"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "deny"
needless_pass_by_value = "deny"
negative_feature_names = "warn"
non_zero_suggestions = "warn"
nonminimal_bool = "deny"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
option_if_let_else = "warn"
option_option = "warn"
or_fun_call = "deny"
path_buf_push_overwrite = "warn"
pathbuf_init_then_push = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
pub_underscore_fields = "warn"
pub_without_shorthand = "warn"
rc_mutex = "warn"
readonly_write_lock = "warn"
redundant_closure_for_method_calls = "warn"
redundant_type_annotations = "warn"
ref_as_ptr = "warn"
ref_option_ref = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "deny"
set_contains_or_insert = "warn"
should_panic_without_expect = "warn"
significant_drop_tightening = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
str_split_at_newline = "warn"
str_to_string = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
suspicious_command_arg_space = "warn"
suspicious_xor_used_as_pow = "warn"
todo = "warn"
too_long_first_doc_paragraph = "warn"
too_many_lines = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_ptr_to_ptr = "warn"
trivially_copy_pass_by_ref = "deny"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "deny"
unchecked_duration_subtraction = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
uninhabited_references = "warn"
uninlined_format_args = "deny"
unnecessary_box_returns = "warn"
unnecessary_literal_bound = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unnecessary_semicolon = "deny"
unnecessary_struct_initialization = "warn"
unnecessary_wraps = "deny"
unnested_or_patterns = "warn"
unreadable_literal = "deny"
unused_peekable = "warn"
unused_rounding = "warn"
unused_self = "warn"
unused_trait_names = "warn"
use_self = "deny"
used_underscore_binding = "deny"
useless_conversion = "warn"
useless_let_if_seq = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "warn"
wildcard_enum_match_arm = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"
