[package]
name = "subtile-ocr"
version = "0.2.6"
authors = ["Eliza Velasquez", "Gwen Lg <me@gwenlg.fr>"]
edition = "2024"
description = "Converts DVD VOB subtitles to SRT subtitles with Tesseract OCR"
license = "GPL-3.0"
keywords = ["vobsub", "subtitles", "dvd", "ocr", "pgs"]
categories = ["command-line-utilities", "multimedia", "multimedia::video"]
repository = "https://github.com/gwen-lg/subtile-ocr"
homepage = "https://github.com/gwen-lg/subtile-ocr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["cargo", "derive"] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "pnm",
] }
iter_fixed = "0.4"
leptess = "0.14"
log = "0.4"
profiling = "1.0"
puffin = { version = "0.19", features = ["serialization"], optional = true }
rayon = "1.11"
scoped-tls-hkt = "0.1"
simple_logger = { version = "5.1", features = ["colors"] }
subtile = "0.4"
thiserror = "2.0"

[features]
default = []
profile-with-puffin = ["profiling/profile-with-puffin", "dep:puffin"]

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = "warn"
unused_imports = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
# The individually activated lints below come from : nursery, pedantic, restriction or suspicious.
allow_attributes = "warn"
as_ptr_cast_mut = "warn"
await_holding_lock = "warn"
bind_instead_of_map = "warn"
borrowed_box = "deny"
branches_sharing_code = "warn"
cast_nan_to_int = "deny"
clear_with_drain = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
default_union_representation = "warn"
derive_partial_eq_without_eq = "warn"
disallowed_script_idents = "warn"
empty_enum_variants_with_brackets = "warn"
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
exit = "warn"
fallible_impl_from = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
future_not_send = "warn"
get_unwrap = "warn"
implied_bounds_in_impls = "warn"
imprecise_flops = "warn"
infinite_loop = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_over_hash_type = "warn"
large_include_file = "warn"
large_stack_frames = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
literal_string_with_formatting_args = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
non_zero_suggestions = "warn"
nonstandard_macro_braces = "warn"
option_if_let_else = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
pathbuf_init_then_push = "warn"
pub_without_shorthand = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
set_contains_or_insert = "warn"
significant_drop_tightening = "warn"
str_to_string = "warn"
string_add = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suspicious_xor_used_as_pow = "warn"
todo = "warn"
too_long_first_doc_paragraph = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
uninhabited_references = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnecessary_wraps = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
unused_trait_names = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "warn"
